--- a/lazy-k-haskell.cabal
+++ b/lazy-k-haskell.cabal
@@ -1,57 +1,53 @@
-cabal-version:      2.4
+cabal-version:      3.0
 name:               lazy-k-haskell
 version:            0.1.0.0
 synopsis:
     Lazy K interpreter and tools for lambda calculus written in Haskell
 
--- A longer description of the package.
 -- description:
 homepage:           https://github.com/vert2air/lazy_k_haskell
-
--- A URL where users can report bugs.
--- bug-reports:
 license:            MIT
 license-file:       LICENSE
 author:             vert2air
 maintainer:         vert2air@gmail.com
-
--- A copyright notice.
 -- copyright:
--- category:
-extra-source-files:
-    CHANGELOG.md
-    README.md
+category:           Language
+build-type:         Simple
+extra-doc-files:    CHANGELOG.md
+-- extra-source-files:
+
+common warnings
+    ghc-options: -Wall
 
 library
+    import:           warnings
     exposed-modules:  MyLib
-
-    -- Modules included in this library but not exported.
     -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.4.0
+    build-depends:    base ^>=4.21.0.0
     hs-source-dirs:   src
     default-language: Haskell2010
 
 executable lazy-k-haskell
+    import:           warnings
     main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
     -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
-        base ^>=4.16.4.0,
+        base ^>=4.21.0.0,
         lazy-k-haskell
 
     hs-source-dirs:   app
     default-language: Haskell2010
 
 test-suite lazy-k-haskell-test
+    import:           warnings
     default-language: Haskell2010
+    -- other-modules:
+    -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
-    main-is:          MyLibTest.hs
-    build-depends:    base ^>=4.16.4.0
+    main-is:          Main.hs
+    build-depends:
+        base ^>=4.21.0.0,
+        lazy-k-haskell
