--- a/lazy-k-haskell.cabal
+++ b/lazy-k-haskell.cabal
@@ -21,16 +21,19 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib
+    exposed-modules:  LazyKCore
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.21.0.0
+                    , data-default ^>=0.8.0.1
+                    , containers ^>= 0.7
+                    , parsec ^>= 3.1.18.0
     hs-source-dirs:   src
     default-language: Haskell2010
 
-executable lazy-k-haskell
+executable lazy
     import:           warnings
-    main-is:          Main.hs
+    main-is:          lazy.hs
     -- other-modules:
     -- other-extensions:
     build-depends:
